--- a/dungeon V 0.1/index.html
+++ b/dungeon V 0.1/index.html
@@ -1,7 +1,7 @@
 </html>
 
 <head>
-  <title>Primeros juegos: Dungeon</title>
+  <title>Primeros juegos: Dungeon V 0.1</title>
   <script src='js/game.js'></script>
 </head>
 
