--- a/dungeon V 0.2/index.html
+++ b/dungeon V 0.2/index.html
@@ -1,7 +1,7 @@
 </html>
 
 <head>
-  <title>Primeros juegos: Dungeon 2.0</title>
+  <title>Primeros juegos: Dungeon V 0.2</title>
   <script src='js/game.js'></script>
 </head>
 
