--- a/dungeon V 0.3/index.html
+++ b/dungeon V 0.3/index.html
@@ -1,7 +1,7 @@
 </html>
 
 <head>
-  <title>Primeros juegos: Dungeon 3.0</title>
+  <title>Primeros juegos: Dungeon V 0.3</title>
   <script src='js/stage.js'></script>
   <script src='js/player.js'></script>
   <script src='js/enemy.js'></script>
