--- a/tetris V 0.2/index.html
+++ b/tetris V 0.2/index.html
@@ -1,7 +1,9 @@
 </html>
 
 <head>
-  <title>Primeros juegos: Tetris V 0.1</title>
+  <title>Primeros juegos: Tetris V 0.2</title>
+  <script src="js/variables.js"></script>
+  <script src="js/piece.js"></script>
   <script src='js/game.js'></script>
 </head>
 
