--- a/dungeon V 0.3.2/index.html
+++ b/dungeon V 0.3.2/index.html
@@ -2,10 +2,17 @@
 
 <head>
   <title>Primeros juegos: Dungeon V 0.3.1</title>
+
   <script src='js/variables.js'></script>
+
   <script src='js/player.js'></script>
+
   <script src='js/enemy.js'></script>
+
+  <script src='js/torch.js'></script>
+
   <script src='js/camera.js'></script>
+
   <script src='js/game.js'></script>
 </head>
 
