--- a/dungeon V 0.3.2/index.html
+++ b/dungeon V 0.3.2/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Primeros juegos: Dungeon V 0.3.1</title>
 
+  <script src='js/utils.js'></script>
+
   <script src='js/variables.js'></script>
 
   <script src='js/player.js'></script>
