--- a/tetris V 0.2/index.html
+++ b/tetris V 0.2/index.html
@@ -1,14 +1,13 @@
-</html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Primeros juegos: Tetris V 0.2</title>
+    <script src="js/variables.js"></script>
+    <script src="js/piece.js"></script>
+    <script src="js/game.js"></script>
+  </head>
 
-<head>
-  <title>Primeros juegos: Tetris V 0.2</title>
-  <script src="js/variables.js"></script>
-  <script src="js/piece.js"></script>
-  <script src='js/game.js'></script>
-</head>
-
-<body onload='initialize();'>
-  <canvas id='canvas' style='border:2px solid #000000;'></canvas>
-</body>
-
+  <body onload="initialize();">
+    <canvas id="canvas" style="border: 2px solid #000000"></canvas>
+  </body>
 </html>
