--- a/dungeon V 0.2/index.html
+++ b/dungeon V 0.2/index.html
@@ -1,12 +1,11 @@
-</html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Primeros juegos: Dungeon V 0.2</title>
+    <script src="js/game.js"></script>
+  </head>
 
-<head>
-  <title>Primeros juegos: Dungeon V 0.2</title>
-  <script src='js/game.js'></script>
-</head>
-
-<body onload='initialize();'>
-  <canvas id='canvas' width='750' height='500' style='border:2px solid #000000;'></canvas>
-</body>
-
+  <body onload="initialize();">
+    <canvas id="canvas" width="750" height="500" style="border: 2px solid #000000"></canvas>
+  </body>
 </html>
