--- a/dungeon V 0.3/index.html
+++ b/dungeon V 0.3/index.html
@@ -1,17 +1,16 @@
-</html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Primeros juegos: Dungeon V 0.3</title>
+    <script src="js/stage.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/enemy.js"></script>
+    <script src="js/torch.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/game.js"></script>
+  </head>
 
-<head>
-  <title>Primeros juegos: Dungeon V 0.3</title>
-  <script src='js/stage.js'></script>
-  <script src='js/player.js'></script>
-  <script src='js/enemy.js'></script>
-  <script src='js/torch.js'></script>
-  <script src='js/utils.js'></script>
-  <script src='js/game.js'></script>
-</head>
-
-<body onload='initialize();'>
-  <canvas id='canvas' width='750' height='500' style='border:2px solid #000000;'></canvas>
-</body>
-
+  <body onload="initialize();">
+    <canvas id="canvas" width="750" height="500" style="border: 2px solid #000000"></canvas>
+  </body>
 </html>
