--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Primeros juegos: Dungeon V 1.0</title>
+    <title>Dungeon V 1.1</title>
 
     <link href="css/index.css" rel="stylesheet" type="text/css" />
 
@@ -20,6 +20,18 @@
     <script src="js/camera.js"></script>
 
     <script src="js/game.js"></script>
+
+    <link rel="icon" href="%PUBLIC_URL%sword16.png" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta name="theme-color" content="#000000" />
+
+    <meta name="description" content="Dungeon V 1.1" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/sword256.png" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
 
   <body onload="initialize();">
