--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
     <meta name="description" content="Dungeon V 1.1" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/sword256.png" />
+    <link rel="apple-touch-icon" href="sword256.png" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
   </head>
 
   <body onload="initialize();">
