--- a/dungeon V 1.1/index.html
+++ b/dungeon V 1.1/index.html
@@ -3,25 +3,25 @@
   <head>
     <title>Dungeon V 1.1</title>
 
-    <link href="css/index.css" rel="stylesheet" type="text/css" />
+    <link href="./css/index.css" rel="stylesheet" type="text/css" />
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-    <script src="js/utils.js"></script>
+    <script src="./js/utils.js"></script>
 
-    <script src="js/variables.js"></script>
+    <script src="./js/variables.js"></script>
 
-    <script src="js/player.js"></script>
+    <script src="./js/player.js"></script>
 
-    <script src="js/enemy.js"></script>
+    <script src="./js/enemy.js"></script>
 
-    <script src="js/torch.js"></script>
+    <script src="./js/torch.js"></script>
 
-    <script src="js/camera.js"></script>
+    <script src="./js/camera.js"></script>
 
-    <script src="js/game.js"></script>
+    <script src="./js/game.js"></script>
 
-    <link rel="icon" href="%PUBLIC_URL%sword16.png" />
+    <link rel="icon" href="./img/sword16.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -29,9 +29,9 @@
 
     <meta name="description" content="Dungeon V 1.1" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/sword256.png" />
+    <link rel="apple-touch-icon" href="./img/sword256.png" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
   </head>
 
   <body onload="initialize();">
