--- a/dungeon V 1.1.1/index.html
+++ b/dungeon V 1.1.1/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dungeon V 1.1</title>
-
     <link href="./css/index.css" rel="stylesheet" type="text/css" />
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     <script src="./js/utils.js"></script>
-
     <script src="./js/variables.js"></script>
-
     <script src="./js/player.js"></script>
-
     <script src="./js/enemy.js"></script>
-
     <script src="./js/torch.js"></script>
-
     <script src="./js/camera.js"></script>
-
     <script src="./js/game.js"></script>
 
-    <link rel="icon" href="./img/sword16.png" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <meta name="theme-color" content="#000000" />
 
-    <meta name="description" content="Dungeon V 1.1" />
-
+    <link rel="icon" href="./img/sword16.png" />
     <link rel="apple-touch-icon" href="./img/sword256.png" />
-
     <link rel="manifest" href="./manifest.json" />
+
+    <title>Dungeon V 1.1.1 - Arenas Agustin</title>
+    <meta name="title" content="Dungeon V 1.1.1 - Arenas Agustin" />
+    <meta name="description" content="Es un juego hecho solamente en Html , Css y Javascript . Se puede mover con las flechas del teclado o con los botones de la cruz, consta de 3 niveles donde tenes que buscar la llave y escapar del nivel sin que te alcancen los monstruos. Para jugar hay que prender la gameboy." />
+
+    <!--  Open Graph / Facebook  -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://arenasagustin.github.io/Juegos-HTML/" />
+    <meta property="og:title" content="Dungeon V 1.1.1 - Arenas Agustin" />
+    <meta property="og:description" content="Es un juego hecho solamente en Html , Css y Javascript . Se puede mover con las flechas del teclado o con los botones de la cruz, consta de 3 niveles donde tenes que buscar la llave y escapar del nivel sin que te alcancen los monstruos. Para jugar hay que prender la gameboy." />
+    <meta property="og:image" content="https://res.cloudinary.com/df7zuvuxu/image/upload/v1666968084/dungeon_game_glkan4.png" />
+
+    <!--  Twitter  -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://arenasagustin.github.io/Juegos-HTML/" />
+    <meta property="twitter:title" content="Dungeon V 1.1.1 - Arenas Agustin" />
+    <meta property="twitter:description" content="Es un juego hecho solamente en Html , Css y Javascript . Se puede mover con las flechas del teclado o con los botones de la cruz, consta de 3 niveles donde tenes que buscar la llave y escapar del nivel sin que te alcancen los monstruos. Para jugar hay que prender la gameboy." />
+    <meta property="twitter:image" content="https://res.cloudinary.com/df7zuvuxu/image/upload/v1666968084/dungeon_game_glkan4.png" />
   </head>
 
   <body onload="initialize();">
